Update business information: יעל מימון – מאמנת אישית

--- a/about.html
+++ b/about.html
@@ -238,7 +238,7 @@
         <div class="container nav-container">
             <div class="nav-brand">
                 <a href="/" class="logo-link">
-                    <img src="assets/logo.webp" alt="יעל מימון – אימון בקבוצות קטנות" class="logo" />
+                    <img src="assets/logo.webp" alt="יעל מימון – מאמנת אישית" class="logo" />
                 </a>
             </div>
             
@@ -443,7 +443,7 @@
                 <p>מוזמנת לשיעור היכרות חינם. בואי לראות בעצמך מה הופך את האימונים שלי למיוחדים, ולהכיר את הקבוצה המדהימה שלנו.</p>
                 <div class="cta-buttons">
                     <a href="/contact" class="btn btn-primary">הרשמה לשיעור היכרות</a>
-                    <a href="https://wa.me/[business_phone]" class="btn btn-secondary" target="_blank" rel="noopener noreferrer">
+                    <a href="https://wa.me/+972528750091" class="btn btn-secondary" target="_blank" rel="noopener noreferrer">
                         <i class="fab fa-whatsapp"></i> שלחו הודעה בוואטסאפ
                     </a>
                 </div>
@@ -451,7 +451,7 @@
         </div>
     </section>
 
-    <a href="https://wa.me/[business_phone]" target="_blank" class="whatsapp-float" aria-label="WhatsApp" rel="noopener noreferrer">
+    <a href="https://wa.me/+972528750091" target="_blank" class="whatsapp-float" aria-label="WhatsApp" rel="noopener noreferrer">
         <i class="fab fa-whatsapp"></i>
     </a>
 
@@ -461,7 +461,7 @@
       <div class="container">
         <div class="footer-main">
           <div class="all-rights-reserved">
-            <p>© 2025 יעל מימון – אימון בקבוצות קטנות. כל הזכויות שמורות.</p>
+            <p>© 2025 יעל מימון – מאמנת אישית. כל הזכויות שמורות.</p>
           </div>
           <div class="footer-social"><a href="[social_facebook]" target="_blank" rel="noopener noreferrer" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
 <a href="[social_instagram]" target="_blank" rel="noopener noreferrer" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
