Update business information: יעל מימון – מאמנת אישית

--- a/about.html
+++ b/about.html
@@ -443,7 +443,7 @@
                 <p>מוזמנת לשיעור היכרות חינם. בואי לראות בעצמך מה הופך את האימונים שלי למיוחדים, ולהכיר את הקבוצה המדהימה שלנו.</p>
                 <div class="cta-buttons">
                     <a href="/contact" class="btn btn-primary">הרשמה לשיעור היכרות</a>
-                    <a href="https://wa.me/+972528750091" class="btn btn-secondary" target="_blank" rel="noopener noreferrer">
+                    <a href="+972528750091" class="btn btn-secondary" target="_blank" rel="noopener noreferrer">
                         <i class="fab fa-whatsapp"></i> שלחו הודעה בוואטסאפ
                     </a>
                 </div>
@@ -451,7 +451,7 @@
         </div>
     </section>
 
-    <a href="https://wa.me/+972528750091" target="_blank" class="whatsapp-float" aria-label="WhatsApp" rel="noopener noreferrer">
+    <a href="+972528750091" target="_blank" class="whatsapp-float" aria-label="WhatsApp" rel="noopener noreferrer">
         <i class="fab fa-whatsapp"></i>
     </a>
 
@@ -465,7 +465,7 @@
           </div>
           <div class="footer-social"><a href="[social_facebook]" target="_blank" rel="noopener noreferrer" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
 <a href="[social_instagram]" target="_blank" rel="noopener noreferrer" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-<a href="[social_whatsapp]" target="_blank" rel="noopener noreferrer" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a></div>
+<a href="+972528750091" target="_blank" rel="noopener noreferrer" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a></div>
           <div class="footer-legal">
             <a href="privacy.html" target="_blank" rel="noopener" aria-label="מדיניות פרטיות">
               מדיניות פרטיות
