--- a/contact.html
+++ b/contact.html
@@ -359,6 +359,24 @@
                         
                         <div class="contact-info-item">
                             <div class="contact-icon">
+                                <i class="fas fa-clock"></i>
+                            </div>
+                            <div class="contact-details">
+                                <h3>שעות פעילות</h3>
+                                <div class="business-hours">
+                                    <p>יום ראשון: 09:00 - 17:00</p>
+                                    <p>יום שני: 09:00 - 17:00</p>
+                                    <p>יום שלישי: 09:00 - 17:00</p>
+                                    <p>יום רביעי: 09:00 - 17:00</p>
+                                    <p>יום חמישי: 09:00 - 17:00</p>
+                                    <p>יום שישי: 09:00 - 17:00</p>
+                                    <p>יום שבת: סגור</p>
+                                </div>
+                            </div>
+                        </div>
+                        
+                        <div class="contact-info-item">
+                            <div class="contact-icon">
                                 <i class="fab fa-whatsapp"></i>
                             </div>
                             <div class="contact-details">
@@ -371,7 +389,7 @@
                     <div class="quick-contact">
                         <h3>מענה מהיר בוואטסאפ</h3>
                         <p>לתשובות מהירות ושירות אישי, שלחו לנו הודעה בוואטסאפ. אנחנו זמינות לכל שאלה!</p>
-                        <a href="https://wa.me/972528750091" class="btn btn-secondary" target="_blank" rel="noopener noreferrer">
+                        <a href="+972528750091" class="btn btn-secondary" target="_blank" rel="noopener noreferrer">
                             <i class="fab fa-whatsapp"></i> פתחו שיחה בוואטסאפ
                         </a>
                     </div>
@@ -417,7 +435,7 @@
         </div>
     </section>
 
-    <a href="https://wa.me/972528750091" target="_blank" class="whatsapp-float" aria-label="WhatsApp" rel="noopener noreferrer">
+    <a href="+972528750091" target="_blank" class="whatsapp-float" aria-label="WhatsApp" rel="noopener noreferrer">
         <i class="fab fa-whatsapp"></i>
     </a>
 
@@ -431,7 +449,7 @@
           </div>
           <div class="footer-social"><a href="[social_facebook]" target="_blank" rel="noopener noreferrer" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
 <a href="[social_instagram]" target="_blank" rel="noopener noreferrer" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-<a href="[social_whatsapp]" target="_blank" rel="noopener noreferrer" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a></div>
+<a href="+972528750091" target="_blank" rel="noopener noreferrer" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a></div>
           <div class="footer-legal">
             <a href="privacy.html" target="_blank" rel="noopener" aria-label="מדיניות פרטיות">
               מדיניות פרטיות
