--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
             <p>הצטרפי לקבוצות כושר קטנות לנשים והתחילי את המסע שלך לבריאות, חוזק ואיזון. אימון אישי באווירה קבוצתית מעצימה.</p>
             <div class="hero-buttons">
                 <a href="/contact" class="btn btn-primary">הרשמה לשיעור היכרות</a>
-                <a href="https://wa.me/+972528750091" class="btn btn-secondary" target="_blank" rel="noopener noreferrer">
+                <a href="+972528750091" class="btn btn-secondary" target="_blank" rel="noopener noreferrer">
                     <i class="fab fa-whatsapp"></i> שלחו הודעה בוואטסאפ
                 </a>
             </div>
@@ -407,7 +407,7 @@
                 <p>הצטרפי לשיעור היכרות חינם וגלי את הכוח שבך. אין התחייבות, רק הזדמנות להכיר את האימונים ואת הקבוצה.</p>
                 <div class="cta-buttons">
                     <a href="/contact" class="btn btn-primary">הרשמה לשיעור היכרות</a>
-                    <a href="https://wa.me/+972528750091" class="btn btn-secondary" target="_blank" rel="noopener noreferrer">
+                    <a href="+972528750091" class="btn btn-secondary" target="_blank" rel="noopener noreferrer">
                         <i class="fab fa-whatsapp"></i> שלחו הודעה בוואטסאפ
                     </a>
                 </div>
@@ -415,7 +415,7 @@
         </div>
     </section>
 
-    <a href="https://wa.me/+972528750091" target="_blank" class="whatsapp-float" aria-label="WhatsApp" rel="noopener noreferrer">
+    <a href="+972528750091" target="_blank" class="whatsapp-float" aria-label="WhatsApp" rel="noopener noreferrer">
         <i class="fab fa-whatsapp"></i>
     </a>
 
@@ -429,7 +429,7 @@
           </div>
           <div class="footer-social"><a href="[social_facebook]" target="_blank" rel="noopener noreferrer" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
 <a href="[social_instagram]" target="_blank" rel="noopener noreferrer" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-<a href="[social_whatsapp]" target="_blank" rel="noopener noreferrer" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a></div>
+<a href="+972528750091" target="_blank" rel="noopener noreferrer" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a></div>
           <div class="footer-legal">
             <a href="privacy.html" target="_blank" rel="noopener" aria-label="מדיניות פרטיות">
               מדיניות פרטיות
