Revert "Update color palette to Corporate Trust"
This reverts commit c086384978b04deb192df700d705d0f5de462bad.

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   opacity: 0.7;
 }</style>
     <!-- Cookie Consent -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vanilla-cookieconsent@3/dist/cookieconsent.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vanilla-cookieconsent@3/dist/cookieconsent.css" />
     <script src="https://cdn.jsdelivr.net/npm/vanilla-cookieconsent@3/dist/cookieconsent.umd.js"></script>
     <!-- Mickidum Accessibility Toolbar -->
     <script src="https://cdn.jsdelivr.net/gh/mickidum/acc_toolbar/acctoolbar/acctoolbar.min.js"></script>
@@ -238,7 +238,7 @@
         <div class="container nav-container">
             <div class="nav-brand">
                 <a href="/" class="logo-link">
-                    <img src="assets/logo.webp" alt="יעל מימון – מאמנת אישית" class="logo">
+                    <img src="assets/logo.webp" alt="יעל מימון – מאמנת אישית" class="logo" />
                 </a>
             </div>
             
@@ -333,7 +333,7 @@
                         <i class="fas fa-users"></i>
                     </div>
                     <h3>קבוצות קטנות</h3>
-                    <p>עד 5 משתתפות בקבוצה - תשומת לב אישית לכל אחת</p>
+                    <p>עד 8 משתתפות בקבוצה - תשומת לב אישית לכל אחת</p>
                 </div>
                 
                 <div class="feature-item">
