Update text content: "השירותים שלנו" → "הקבוצות שלנו"

--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
 
     <section class="services-preview">
         <div class="container">
-            <h2>השירותים שלנו</h2>
+            <h2>הקבוצות שלנו</h2>
             <div class="services-grid">
                 <div class="service-card">
                     <div class="service-image">
