--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                     <div class="service-image">
                         <img data-placeholder="service-1" data-context="Group of women doing strength training exercises with dumbbells in small fitness class, focused and determined expressions, clean modern gym" src="assets/service-service-1.webp" alt="אימון כוח לנשים">
                     </div>
-                    <h3>אימון כוח ועיצוב</h3>
+                    <h3>קבוצת נשים</h3>
                     <p>אימוני כוח מותאמים לנשים בקבוצות קטנות. חיזוק שרירים, עיצוב הגוף, ושיפור הכושר הכללי באווירה תומכת ומעצימה.</p>
                 </div>
                 
