Update text content: "אימון אירובי וקרדיו" → "קבוצת נערות"

--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
                     <div class="service-image">
                         <img data-placeholder="service-2" data-context="Women doing cardiovascular exercises in energetic small group class, dynamic movement, bright and motivating atmosphere" src="assets/service-service-2.webp" alt="אימון אירובי">
                     </div>
-                    <h3>אימון אירובי וקרדיו</h3>
+                    <h3>קבוצת נערות</h3>
                     <p>אימונים אירוביים דינמיים לשיפור סיבולת, שריפת קלוריות, וחיזוק מערכת הלב וכלי הדם. אימון קבוצתי מהנה ואנרגטי.</p>
                 </div>
                 
