--- a/index.html
+++ b/index.html
@@ -342,7 +342,8 @@
                         <img data-placeholder="service-1" data-context="Group of women doing strength training exercises with dumbbells in small fitness class, focused and determined expressions, clean modern gym" src="assets/service-service-1.webp" alt="אימון כוח לנשים">
                     </div>
                     <h3>קבוצת נשים</h3>
-                    <p>אימוני כוח מותאמים לנשים בקבוצות קטנות. חיזוק שרירים, עיצוב הגוף, ושיפור הכושר הכללי באווירה תומכת ומעצימה.</p>
+                    <p>אימוני כוח וחיטוב בקבוצות קטנות לנשים, עם דגש על בניית גוף חזק, יציב וחטוב.
+שילוב בין עבודה עם משקולות, מכשירי כוח ותרגילי באווירה נעימה, תומכת ומעצימה.</p>
                 </div>
                 
                 <div class="service-card">
