--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
                         <img data-placeholder="service-2" data-context="Women doing cardiovascular exercises in energetic small group class, dynamic movement, bright and motivating atmosphere" src="assets/service-service-2.webp" alt="אימון אירובי">
                     </div>
                     <h3>קבוצת נערות</h3>
-                    <p>אימונים אירוביים דינמיים לשיפור סיבולת, שריפת קלוריות, וחיזוק מערכת הלב וכלי הדם. אימון קבוצתי מהנה ואנרגטי.</p>
+                    <p>אימוני כוח וחיטוב לנערות, המתמקדים בחיזוק חגורת הכתפיים, שיפור היציבה ועיצוב הגוף בצורה מאוזנת ובריאה. האימונים משלבים תרגילי כוח דינמיים ותנועתיים המעניקים תחושת אנרגיה ובטחון.</p>
                 </div>
                 
                 <div class="service-card">
