Update text content: "תוכניות אימון מיוחדות לילדים ומתבגרים בקבוצות קטנו..." → "אימונים מהנים ומאתגרים לילדים ולמתבגרים בקבוצות קט..."

--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
                         <img data-placeholder="service-3" data-context="Children and teenagers doing fun fitness activities in small group, playful and encouraging atmosphere, colorful exercise equipment" src="assets/service-service-3.webp" alt="אימון קבוצתי לילדים ומתבגרים">
                     </div>
                     <h3>אימון קבוצתי לילדים ומתבגרים</h3>
-                    <p>תוכניות אימון מיוחדות לילדים ומתבגרים בקבוצות קטנות. פיתוח כושר גופני, ביטחון עצמי, והרגלי חיים בריאים מגיל צעיר.</p>
+                    <p>אימונים מהנים ומאתגרים לילדים ולמתבגרים בקבוצות קטנות, עם דגש על פיתוח קואורדינציה, חיזוק חגורת הכתפיים והקניית כוח מתפרץ. דרך משחקים, תרגילי כוח ותנועה. הילדים מפתחים ביטחון עצמי, כושר גופני והרגלים בריאים לחיים.</p>
                 </div>
             </div>
             <div class="services-cta">
