Update text content: "שירותים" → "הקבוצות שלנו"

--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
             </button>
             
             <ul class="nav-menu" id="navMenu">
-                <li><a href="/services">שירותים</a></li>
+                <li><a href="/services">הקבוצות שלנו</a></li>
                 <li><a href="/about">אודות</a></li>
                 <li><a href="/contact">צור קשר</a></li>
             </ul>
@@ -363,7 +363,7 @@
                 </div>
             </div>
             <div class="services-cta">
-                <a href="/services" class="btn btn-primary">לכל השירותים</a>
+                <a href="/services" class="btn btn-primary">לכל ההקבוצות שלנו</a>
             </div>
         </div>
     </section>
