--- a/services.html
+++ b/services.html
@@ -61,7 +61,7 @@
   opacity: 0.7;
 }</style>
     <!-- Cookie Consent -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vanilla-cookieconsent@3/dist/cookieconsent.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vanilla-cookieconsent@3/dist/cookieconsent.css">
     <script src="https://cdn.jsdelivr.net/npm/vanilla-cookieconsent@3/dist/cookieconsent.umd.js"></script>
     <!-- Mickidum Accessibility Toolbar -->
     <script src="https://cdn.jsdelivr.net/gh/mickidum/acc_toolbar/acctoolbar/acctoolbar.min.js"></script>
@@ -281,7 +281,7 @@
         <div class="container nav-container">
             <div class="nav-brand">
                 <a href="/" class="logo-link">
-                    <img src="assets/logo.webp" alt="יעל מימון – מאמנת אישית" class="logo" />
+                    <img src="assets/logo.webp" alt="יעל מימון – מאמנת אישית" class="logo">
                 </a>
             </div>
             
@@ -301,7 +301,7 @@
             </button>
             
             <ul class="nav-menu" id="navMenu">
-                <li><a href="/services">שירותים</a></li>
+                <li><a href="/services">הקבוצות שלנו</a></li>
                 <li><a href="/about">אודות</a></li>
                 <li><a href="/contact">צור קשר</a></li>
             </ul>
@@ -310,7 +310,7 @@
 
     <section class="page-header">
         <div class="container">
-            <h1>השירותים שלנו</h1>
+            <h1>ההקבוצות שלנו שלנו</h1>
             <p>אימון כושר לנשים בקבוצות קטנות ואימון קבוצתי לילדים ומתבגרים - תוכניות מותאמות אישית לכל רמה ויעד</p>
         </div>
     </section>
