Update text content: "למה לבחור ביעל מימון?" → "למה להתאמן אצלי ?"

--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
 
     <section class="why-us">
         <div class="container">
-            <h2>למה לבחור ביעל מימון?</h2>
+            <h2>למה להתאמן אצלי ?</h2>
             <div class="features-grid">
                 <div class="feature-item">
                     <div class="feature-icon">
