Update text content: ""הצטרפתי לאימונים של יעל לפני שנה וזה שינה את החיי..." → ""הגעתי לאימונים אחרי שנים שלא עשיתי ספורט, ותוך כמ..."

--- a/index.html
+++ b/index.html
@@ -413,7 +413,10 @@
             <div class="testimonials-grid">
                 <div class="testimonial-card">
                     <div class="testimonial-content">
-                        <p>"הצטרפתי לאימונים של יעל לפני שנה וזה שינה את החיים שלי. הקבוצה הקטנה נותנת תחושה של בית, ויעל תמיד דואגת שכל אחת מקבלת את מה שהיא צריכה. הרגשתי שאני מתחזקת לא רק פיזית אלא גם נפשית."</p>
+                        <p>"הגעתי לאימונים אחרי שנים שלא עשיתי ספורט, ותוך כמה שבועות הרגשתי שינוי אמיתי, והאנרגיה שלי בשמיים.
+אחרי כל אימון אני יוצאת עם חיוך ותחושת ניצחון. למדתי לאהוב את הגוף שלי מחדש, להבין מה זה כוח אמיתי, ולהאמין בעצמי.
+האימונים בדיוק בקצב שלי, עם תשומת לב אישית של יעל לכל מתאמנת. 
+תוך זמן קצר ראיתי תוצאות בחיטוב וביציבה, פשוט תענוג !"</p>
                     </div>
                     <div class="testimonial-author">
                         <h4>שרה כהן</h4>
