Update text content: "שרה כהן" → "דנה"

--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
 תוך זמן קצר ראיתי תוצאות בחיטוב וביציבה, פשוט תענוג !"</p>
                     </div>
                     <div class="testimonial-author">
-                        <h4>שרה כהן</h4>
+                        <h4>דנה</h4>
                         <span>מתאמנת כבר שנה</span>
                     </div>
                 </div>
