Update text content: "מיכל לוי" → "מיכל"

--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
                         <p>"הבת שלי בת 13 מתאמנת אצל יעל בקבוצה לנוער. זה נתן לה כל כך הרבה ביטחון עצמי וכוח. היא אוהבת את האימונים ותמיד חוזרת הביתה עם חיוך על הפנים. ממליצה בחום לכל אמא שרוצה לתת לילדה שלה כלים לחיים בריאים."</p>
                     </div>
                     <div class="testimonial-author">
-                        <h4>מיכל לוי</h4>
+                        <h4>מיכל</h4>
                         <span>אמא למתאמנת</span>
                     </div>
                 </div>
